# switchmapy

./: README.md  pyproject.toml  site.yml.example
.github/workflows/: ci.yml
docs/: migration_notes.md  usage.md
switchmap_py/: __init__.py  cli.py  config.py
switchmap_py/importers/: __init__.py  arp_csv.py
switchmap_py/model/: arp.py  mac.py  port.py  switch.py  vlan.py
switchmap_py/render/: build.py
switchmap_py/render/static/: switchmap.css
switchmap_py/render/templates/: index.html.j2  ports.html.j2  search.html.j2  switch.html.j2
switchmap_py/search/: app.py  index_builder.py
switchmap_py/snmp/: collectors.py  mibs.py  session.py
switchmap_py/storage/: __init__.py  idlesince_store.py  maclist_store.py
tests/: XSS_REGRESSION_TESTS.md  test_arp_csv_importer.py  test_build_html.py  test_build_site.py  test_cli_get_arp.py  test_collectors.py  test_collectors_logging.py  test_config.py  test_encoding_and_determinism.py  test_idlesince_store.py  test_maclist_store.py  test_scan_switch.py
